[package]
name = "fv-resolver"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-console = { workspace = true }
fv-cache-key = { workspace = true }
fv-client = { workspace = true }
fv-configuration = { workspace = true }
fv-distribution = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-distribution-types = { workspace = true }
fv-flags = { workspace = true }
fv-fs = { workspace = true, features = ["serde"] }
fv-git = { workspace = true }
fv-git-types = { workspace = true }
fv-metadata = { workspace = true }
fv-normalize = { workspace = true }
fv-once-map = { workspace = true }
fv-pep440 = { workspace = true }
fv-pep508 = { workspace = true }
fv-platform-tags = { workspace = true }
fv-preview = { workspace = true }
fv-pypi-types = { workspace = true }
fv-python = { workspace = true }
fv-redacted = { workspace = true }
fv-requirements-txt = { workspace = true }
fv-small-str = { workspace = true }
fv-static = { workspace = true }
fv-torch = { workspace = true }
fv-types = { workspace = true }
fv-version = { workspace = true }
fv-warnings = { workspace = true }
fv-workspace = { workspace = true }

arcstr = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
cyclonedx-bom = { workspace = true }
dashmap = { workspace = true }
either = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true, features = ["serde"] }
owo-colors = { workspace = true }
percent-encoding = { workspace = true }
petgraph = { workspace = true }
pubgrub = { workspace = true }
rkyv = { workspace = true }
rustc-hash = { workspace = true }
same-file = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
smallvec = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
toml = { workspace = true }

[features]
tracing-durations-export = []
